[package]
name = "solana-faucet"
version = "1.8.14"
description = "Solana Faucet"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
documentation = "https://docs.rs/solana-faucet"
edition = "2018"

[dependencies]
bincode = "1.3.1"
byteorder = "1.3.4"
clap = "2.33"
log = "0.4.11"
serde = "1.0.122"
serde_derive = "1.0.103"
solana-clap-utils = { git = "https://github.com/solindex/clap-utils.git", version = "=1.8.14" }
solana-cli-config = { git = "https://github.com/solindex/cli-config.git", version = "=1.8.14" }
solana-logger = { git = "https://github.com/solindex/logger.git", version = "=1.8.14" }
solana-metrics = { git = "https://github.com/solindex/metrics.git", version = "=1.8.14" }
solana-sdk = { git = "https://github.com/solindex/sdk.git", version = "=1.8.14" }
solana-version = { git = "https://github.com/solindex/version.git", version = "=1.8.14" }
spl-memo = { version = "=3.0.1", features = ["no-entrypoint"] }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }

[lib]
crate-type = ["lib"]
name = "solana_faucet"

[[bin]]
name = "solana-faucet"
path = "src/bin/faucet.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
